--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "tmp": "^0.2.0",
     "typescript": "^4.6.4",
     "uuid": "^9.0.0",
-    "yargs": "^17.0.0"
+    "yargs": "^17.0.0",
+    "triple-beam": "1.3.0"
   }
 }
