--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "stream-events": "^1.0.4",
     "teeny-request": "^8.0.0",
     "through2": "^4.0.0",
+    "triple-beam": "1.3.0",
     "winston": "^3.8.2"
   },
   "devDependencies": {
