--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "stack-trace": "0.0.10",
     "stream-events": "^1.0.4",
     "triple-beam": "1.3.0",
-    "winston": "^3.8.2"
+    "winston": "^3.8.2",
     "teeny-request": "^9.0.0",
     "through2": "^4.0.0"
   },
