--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "events-intercept": "^2.0.0",
     "extend": "^3.0.2",
     "google-auth-library": "^9.0.0",
-    "google-gax": "^4.0.3",
+    "google-gax": "4.0.3",
     "grpc-gcp": "^1.0.0",
     "is": "^3.2.1",
     "lodash.snakecase": "^4.1.1",
