--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "docs": "jsdoc -c .jsdoc.js",
     "predocs": "npm run compile",
     "lint": "gts check",
-    "samples-test": "cd samples/ && npm link ../ && npm test -- --grep='should list all instance config operations' && cd ../",
+    "samples-test": "cd samples/ && npm link ../ && npm test -- --grep='should get a specific instance config' && cd ../",
     "system-test": "mocha build/system-test --timeout 1600000",
     "cleanup": "mocha scripts/cleanup.js --timeout 30000",
     "test": "mocha build/test build/test/common",
