--- a/samples/package.json
+++ b/samples/package.json
@@ -11,7 +11,7 @@
     "node": ">=14.0.0"
   },
   "scripts": {
-    "test": "mocha system-test --timeout 1600000"
+    "test": "mocha system-test/spanner.test.js --timeout 1600000"
   },
   "dependencies": {
     "@google-cloud/kms": "^4.0.0",
