--- a/samples/package.json
+++ b/samples/package.json
@@ -18,7 +18,8 @@
     "@google-cloud/kms": "^4.0.0",
     "@google-cloud/precise-date": "^4.0.0",
     "@google-cloud/spanner": "^7.7.0",
-    "yargs": "^17.0.0"
+    "yargs": "^17.0.0",
+    "protobufjs": "^7.0.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
