--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "ycsb": "node ./benchmark/ycsb.js  run -P ./benchmark/workloada -p table=usertable -p cloudspanner.instance=ycsb-instance -p operationcount=100 -p cloudspanner.database=ycsb",
     "fix": "gts fix",
     "clean": "gts clean",
-    "compile": "tsc -p . && cp -r protos build",
+    "compile": "tsc -p . && cp -r protos build && cp -r test/data build/test",
     "prepare": "npm run compile-protos && npm run compile",
     "pretest": "npm run compile",
     "presystem-test": "npm run compile",
