--- a/samples/package.json
+++ b/samples/package.json
@@ -16,10 +16,26 @@
   },
   "dependencies": {
     "@google-cloud/kms": "^4.0.0",
+    "@google-cloud/opentelemetry-cloud-trace-exporter": "^2.3.0",
     "@google-cloud/precise-date": "^4.0.0",
     "@google-cloud/spanner": "^7.14.0",
-    "yargs": "^17.0.0",
-    "protobufjs": "^7.0.0"
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.47.1",
+    "@opentelemetry/exporter-jaeger": "^1.25.1",
+    "@opentelemetry/exporter-zipkin": "^1.25.1",
+    "@opentelemetry/instrumentation": "^0.52.1",
+    "@opentelemetry/instrumentation-grpc": "^0.52.1",
+    "@opentelemetry/instrumentation-http": "^0.52.1",
+    "@opentelemetry/propagator-ot-trace": "^0.27.2",
+    "@opentelemetry/resources": "^1.25.1",
+    "@opentelemetry/sdk-metrics": "^1.25.1",
+    "@opentelemetry/sdk-node": "^0.52.1",
+    "@opentelemetry/sdk-trace-base": "^1.25.1",
+    "@opentelemetry/sdk-trace-node": "^1.25.1",
+    "@opentelemetry/sdk-trace-web": "^1.25.1",
+    "@opentelemetry/semantic-conventions": "^1.25.1",
+    "protobufjs": "^7.0.0",
+    "yargs": "^17.0.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
