observability: add base for instrumentation + tests
This change adds the scaffolding for instrumentation
along with tests for the tracing mechanisms that'll
be used to trace the entire package.

Built from #2087
Updates #2079

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "test/*.ts",
     "test/**/*.ts",
     "system-test/*.ts",
-    "benchmark/*.ts"
+    "benchmark/*.ts",
+    "observability-test/*.ts"
   ]
 }
