build: fix path-to-regexp

--- a/package.json
+++ b/package.json
@@ -115,8 +115,10 @@
     "mocha": "^9.2.2",
     "mv": "^2.1.1",
     "ncp": "^2.0.0",
+    "nise": "6.0.0",
     "@opentelemetry/sdk-trace-node": "^1.25.1",
     "p-limit": "^3.0.1",
+    "path-to-regexp": "6.2.2",
     "proxyquire": "^2.0.1",
     "sinon": "^18.0.0",
     "stats-lite": "^2.1.1",
