--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "system-test": "mocha build/system-test --timeout 1600000",
     "observability-test": "mocha build/observability-test --timeout 1600000",
     "cleanup": "mocha scripts/cleanup.js --timeout 30000",
-    "test": "mocha build/test build/test/common build/observability-test",
+    "test": "mocha build/test build/test/common build/observability-test --trace-warnings --timeout 1600000",
     "ycsb": "node ./benchmark/ycsb.js  run -P ./benchmark/workloada -p table=usertable -p cloudspanner.instance=ycsb-instance -p operationcount=100 -p cloudspanner.database=ycsb",
     "fix": "gts fix",
     "clean": "gts clean",
