Isolate benchmarking code because npm run is erroneous and sadly runs other code too
We now have more isolated and more accurate values

```shell
  Benchmarking Database
Total Runs:   20000
Warm up runs: 2500
databaseRunSelect1AsyncAwait
	RAM Untraced(209.906kB) vs Traced     (224.453kB): increase by (14.547kB) or 6.93%
	RAM Untraced(209.906kB) vs Traced+OTEL(243.211kB): increase by (33.305kB) or 15.87%
	Time Untraced(901.139µs) vs Traced     (918.845µs):  increase by (17.706µs) or 1.96%
	Time Untraced(901.139µs) vs Traced+OTEL(1.019ms):  increase by (118.223µs) or 13.12%

databaseRunSelect1Callback
	RAM Untraced(209.789kB) vs Traced     (224.641kB): increase by (14.852kB) or 7.08%
	RAM Untraced(209.789kB) vs Traced+OTEL(242.500kB): increase by (32.711kB) or 15.59%
	Time Untraced(902.862µs) vs Traced     (920.289µs):  increase by (17.427µs) or 1.93%
	Time Untraced(902.862µs) vs Traced+OTEL(1.027ms):  increase by (124.280µs) or 13.77%

databaseRunTransactionAsyncTxRunUpdate
	RAM Untraced(309.352kB) vs Traced     (323.734kB): increase by (14.383kB) or 4.65%
	RAM Untraced(309.352kB) vs Traced+OTEL(324.258kB): increase by (14.906kB) or 4.82%
	Time Untraced(1.508ms) vs Traced     (1.516ms):  increase by (7.340µs) or 0.49%
	Time Untraced(1.508ms) vs Traced+OTEL(1.679ms):  increase by (170.989µs) or 11.34%

databaseRunTransactionAsyncTxRun
	RAM Untraced(299.117kB) vs Traced     (311.320kB): increase by (12.203kB) or 4.08%
	RAM Untraced(299.117kB) vs Traced+OTEL(313.602kB): increase by (14.484kB) or 4.84%
	Time Untraced(1.460ms) vs Traced     (1.469ms):  increase by (8.468µs) or 0.58%
	Time Untraced(1.460ms) vs Traced+OTEL(1.679ms):  increase by (219.068µs) or 15.00%

    ✔ Database runs compared (403854ms)

  Benchmark getTracer
tracerProvider
Total Runs:   20000
Warm up runs: 2500
withNullTracerProviderUnsetGlobalTracerProvider
	RAM (2.273kB)
	TimeSpent (12.171µs)
withTracerDefinedTracerProvider
	RAM (2.695kB)
	TimeSpent (14.074µs)
withTracerRegisteredGlobally
	RAM (2.727

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "test/**/*.ts",
     "system-test/*.ts",
     "benchmark/*.ts",
+    "observability-benchmark/*.ts",
     "observability-test/*.ts"
   ]
 }
