--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@google-cloud/promisify": "^4.0.0",
     "@grpc/proto-loader": "^0.7.0",
     "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/core": "^1.27.0",
     "@opentelemetry/context-async-hooks": "^1.26.0",
     "@opentelemetry/semantic-conventions": "^1.25.1",
     "@types/big.js": "^6.0.0",
