--- a/samples/package.json
+++ b/samples/package.json
@@ -27,6 +27,8 @@
     "@opentelemetry/instrumentation-grpc": "^0.54.0",
     "@opentelemetry/sdk-trace-base": "^1.26.0",
     "@opentelemetry/sdk-trace-node": "^1.26.0",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/core": "^1.27.0",
     "chai": "^4.2.0",
     "mocha": "^9.0.0",
     "p-limit": "^3.0.1"
