--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "through2": "^4.0.0"
   },
   "devDependencies": {
+    "@google-cloud/opentelemetry-cloud-trace-exporter": "^2.4.1",
     "@opentelemetry/sdk-trace-base": "^1.26.0",
     "@opentelemetry/sdk-trace-node": "^1.26.0",
     "@types/concat-stream": "^2.0.0",
