--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "Apache-2.0",
   "author": "Google Inc.",
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=18"
   },
   "repository": "googleapis/nodejs-spanner",
   "main": "./build/src/index.js",
@@ -54,24 +54,24 @@
     "coverage": "c8 mocha build/test build/test/common && c8 report --check-coverage"
   },
   "dependencies": {
-    "@google-cloud/common": "^5.0.0",
+    "@google-cloud/common": "^5.0.2",
     "@google-cloud/precise-date": "^4.0.0",
     "@google-cloud/projectify": "^4.0.0",
     "@google-cloud/promisify": "^4.0.0",
-    "@grpc/proto-loader": "^0.7.0",
+    "@grpc/proto-loader": "^0.7.13",
     "@opentelemetry/api": "^1.9.0",
-    "@opentelemetry/core": "^1.27.0",
-    "@opentelemetry/context-async-hooks": "^1.26.0",
-    "@opentelemetry/semantic-conventions": "^1.25.1",
-    "@types/big.js": "^6.0.0",
-    "@types/stack-trace": "0.0.33",
-    "arrify": "^2.0.0",
-    "big.js": "^6.0.0",
-    "checkpoint-stream": "^0.1.1",
-    "duplexify": "^4.1.1",
+    "@opentelemetry/context-async-hooks": "^1.30.1",
+    "@opentelemetry/core": "^1.30.1",
+    "@opentelemetry/semantic-conventions": "^1.30.0",
+    "@types/big.js": "^6.2.2",
+    "@types/stack-trace": "^0.0.33",
+    "arrify": "^3.0.0",
+    "big.js": "^6.2.2",
+    "checkpoint-stream": "^0.1.2",
+    "duplexify": "^4.1.3",
     "events-intercept": "^2.0.0",
     "extend": "^3.0.2",
-    "google-auth-library": "^9.0.0",
+    "google-auth-library": "^10.0.0-rc.1",
     "google-gax": "4.4.1",
     "grpc-gcp": "^1.0.0",
     "is": "^3.2.1",
