--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "@google-cloud/common": "^5.0.0",
     "@google-cloud/precise-date": "^4.0.0",
     "@google-cloud/projectify": "^4.0.0",
-    "@google-cloud/promisify": "^4.0.0",
+    "@google-cloud/promisify": "4.0.0",
     "@grpc/proto-loader": "^0.7.0",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/core": "^1.27.0",
