--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "7.19.0",
   "license": "Apache-2.0",
   "author": "Google Inc.",
+  "type": "commonjs",
   "engines": {
     "node": ">=18"
   },
