--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
     "outDir": "build",
     "noImplicitAny": false,
     "resolveJsonModule": true,
+    "module": "Node16",
+    "moduleResolution": "Node16",
     "lib": [
       "es2018",
       "dom"
