--- a/package.json
+++ b/package.json
@@ -55,13 +55,16 @@
   },
   "dependencies": {
     "@google-cloud/common": "^6.0.0",
+    "@google-cloud/opentelemetry-resource-util": "^2.4.0",
     "@google-cloud/precise-date": "^5.0.0",
     "@google-cloud/projectify": "^5.0.0",
     "@google-cloud/promisify": "^5.0.0",
+    "@grpc/grpc-js": "^1.13.2",
     "@grpc/proto-loader": "^0.7.13",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/context-async-hooks": "^2.0.0",
     "@opentelemetry/core": "^2.0.0",
+    "@opentelemetry/sdk-metrics": "^1.30.1",
     "@opentelemetry/semantic-conventions": "^1.30.0",
     "@types/big.js": "^6.2.2",
     "@types/stack-trace": "^0.0.33",
@@ -72,6 +75,7 @@
     "extend": "^3.0.2",
     "google-auth-library": "^10.0.0-rc.1",
     "google-gax": "^5.0.1-rc.0",
+    "googleapis": "^148.0.0",
     "grpc-gcp": "^1.0.1",
     "is": "^3.3.0",
     "lodash.snakecase": "^4.1.1",
