--- a/.kokoro/presubmit/node14/system-test-multiplexed-session.cfg
+++ b/.kokoro/presubmit/node14/system-test-multiplexed-session.cfg
@@ -15,3 +15,8 @@ env_vars: {
   key: "GOOGLE_CLOUD_SPANNER_MULTIPLEXED_SESSIONS"
   value: "true"
 }
+
+env_vars: {
+  key: "GOOGLE_CLOUD_SPANNER_MULTIPLEXED_SESSIONS_PARTITIONED_OPS"
+  value: "true"
+}
