--- a/package.json
+++ b/package.json
@@ -71,8 +71,8 @@
     "duplexify": "^4.1.1",
     "events-intercept": "^2.0.0",
     "extend": "^3.0.2",
-    "google-auth-library": "^9.0.0",
-    "google-gax": "4.4.1",
+    "google-auth-library": "^10.0.0-rc.1",
+    "google-gax": "^5.0.1-rc.0",
     "grpc-gcp": "^1.0.0",
     "is": "^3.2.1",
     "lodash.snakecase": "^4.1.1",
