--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "@opentelemetry/semantic-conventions": "^1.30.0",
     "@types/big.js": "^6.2.2",
     "@types/stack-trace": "^0.0.33",
-    "arrify": "^3.0.0",
+    "arrify": "2.0.0",
     "big.js": "^6.2.2",
     "checkpoint-stream": "^0.1.2",
     "duplexify": "^4.1.3",
@@ -77,11 +77,11 @@
     "is": "^3.3.0",
     "lodash.snakecase": "^4.1.1",
     "merge-stream": "^2.0.0",
-    "p-queue": "^8.1.0",
+    "p-queue": "6.0.2",
     "protobufjs": "^7.4.0",
     "retry-request": "^8.0.0",
     "split-array-stream": "^2.0.0",
-    "stack-trace": "^1.0.0-pre2",
+    "stack-trace": "0.0.10",
     "stream-events": "^1.0.5",
     "teeny-request": "^10.0.0",
     "through2": "^4.0.2"
@@ -124,7 +124,7 @@
     "proxyquire": "^2.1.3",
     "sinon": "^20.0.0",
     "stats-lite": "^2.2.0",
-    "time-span": "^5.1.0",
+    "time-span": "4.0.0",
     "tmp": "^0.2.3",
     "typescript": "^5.8.2",
     "uuid": "^11.1.0",
