--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "is": "^3.3.0",
     "lodash.snakecase": "^4.1.1",
     "merge-stream": "^2.0.0",
-    "p-queue": "6.0.2",
+    "p-queue": "^6.0.2",
     "protobufjs": "^7.4.0",
     "retry-request": "^8.0.0",
     "split-array-stream": "^2.0.0",
