--- a/.kokoro/presubmit/node18/system-test.cfg
+++ b/.kokoro/presubmit/node18/system-test.cfg
@@ -10,3 +10,8 @@ env_vars: {
   key: "SECRET_MANAGER_KEYS"
   value: "long-door-651-kokoro-system-test-service-account"
 }
+
+env_vars: {
+  key: "SKIP_BACKUPS"
+  value: "true"
+}
