--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/context-async-hooks": "^2.0.0",
     "@opentelemetry/core": "^2.0.0",
+    "@opentelemetry/resources": "^1.30.0",
+    "@opentelemetry/resource-detector-gcp": "^0.33.0",
     "@opentelemetry/sdk-metrics": "^1.30.1",
     "@opentelemetry/semantic-conventions": "^1.30.0",
     "@types/big.js": "^6.2.2",
