Added better cleanup to tests
- Disabled metrics for unit tests

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,6 +26,7 @@ jobs:
       - run: npm test
         env:
           MOCHA_THROW_DEPRECATION: false
+          SPANNER_DISABLE_BUILTIN_METRICS: true
   test-script:
     runs-on: ubuntu-latest
     steps:
@@ -40,6 +41,7 @@ jobs:
         working-directory: .github/scripts
         env:
           MOCHA_THROW_DEPRECATION: false
+          SPANNER_DISABLE_BUILTIN_METRICS: true
   windows:
     runs-on: windows-latest
     steps:
@@ -51,6 +53,7 @@ jobs:
       - run: npm test
         env:
           MOCHA_THROW_DEPRECATION: false
+          SPANNER_DISABLE_BUILTIN_METRICS: true
   lint:
     runs-on: ubuntu-latest
     steps:
