--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "samples-test-with-archived": "cd samples/ && npm link ../ && npm test-with-archived && cd ../",
     "samples-test": "cd samples/ && npm link ../ && npm test && cd ../",
     "system-test": "mocha build/system-test --timeout 1600000",
-    "observability-test": "SPANNER_DISABLE_BUILTIN_METRICS=true mocha build/observability-test --timeout 1600000",
+    "observability-test": "mocha build/observability-test --timeout 1600000",
     "cleanup": "mocha scripts/cleanup.js --timeout 30000",
-    "test": "SPANNER_DISABLE_BUILTIN_METRICS=true mocha build/test build/test/common build/observability-test",
+    "test": "mocha build/test build/test/common build/observability-test",
     "ycsb": "node ./benchmark/ycsb.js  run -P ./benchmark/workloada -p table=usertable -p cloudspanner.instance=ycsb-instance -p operationcount=100 -p cloudspanner.database=ycsb",
     "fix": "gts fix",
     "clean": "gts clean",
