--- a/package.json
+++ b/package.json
@@ -87,8 +87,9 @@
     "split-array-stream": "^2.0.0",
     "stack-trace": "0.0.10",
     "stream-events": "^1.0.5",
-    "teeny-request": "^10.0.0",
-    "through2": "^4.0.2"
+    "teeny-request": "^10.0.0", 
+    "through2": "^4.0.2",
+    "@babel/traverse": "7.27.7"
   },
   "devDependencies": {
     "@opentelemetry/sdk-trace-base": "^2.0.0",
