--- a/package.json
+++ b/package.json
@@ -89,7 +89,8 @@
     "stream-events": "^1.0.5",
     "teeny-request": "^10.0.0", 
     "through2": "^4.0.2",
-    "@babel/traverse": "7.27.7"
+    "@babel/traverse": "7.27.7",
+    "@babel/types": "7.27.7"
   },
   "devDependencies": {
     "@opentelemetry/sdk-trace-base": "^2.0.0",
