--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "events-intercept": "^2.0.0",
     "extend": "^3.0.2",
     "google-auth-library": "^10.0.0-rc.1",
-    "google-gax": "^5.0.1-rc.0",
+    "google-gax": "5.0.0",
     "grpc-gcp": "^1.0.1",
     "lodash.snakecase": "^4.1.1",
     "merge-stream": "^2.0.0",
@@ -86,8 +86,11 @@
     "split-array-stream": "^2.0.0",
     "stack-trace": "0.0.10",
     "stream-events": "^1.0.5",
-    "teeny-request": "^10.0.0",
-    "through2": "^4.0.2"
+    "teeny-request": "^10.0.0", 
+    "through2": "^4.0.2",
+    "@babel/traverse": "7.27.7",
+    "@babel/core": "7.27.7",
+    "@babel/helpers": "7.27.6"
   },
   "devDependencies": {
     "@opentelemetry/sdk-trace-base": "^2.0.0",
