--- a/.github/sync-repo-settings.yaml
+++ b/.github/sync-repo-settings.yaml
@@ -14,6 +14,7 @@ branchProtectionRules:
       - cla/google
       - windows
       - OwlBot Post Processor
+      - Build with Airlock
 permissionRules:
   - team: yoshi-admins
     permission: admin
