chore: add mux env for r/w to enable kokoro pipeline

--- a/.kokoro/presubmit/node18/system-test-multiplexed-session.cfg
+++ b/.kokoro/presubmit/node18/system-test-multiplexed-session.cfg
@@ -20,3 +20,8 @@ env_vars: {
   key: "GOOGLE_CLOUD_SPANNER_MULTIPLEXED_SESSIONS_PARTITIONED_OPS"
   value: "true"
 }
+
+env_vars: {
+  key: "GOOGLE_CLOUD_SPANNER_MULTIPLEXED_SESSIONS_FOR_RW"
+  value: "true"
+}
