chore: enable integration test against mux as required

--- a/.github/sync-repo-settings.yaml
+++ b/.github/sync-repo-settings.yaml
@@ -7,6 +7,7 @@ branchProtectionRules:
     requiredStatusCheckContexts:
       - "ci/kokoro: Samples test"
       - "ci/kokoro: System test"
+      - "ci/kokoro: System test with Multiplexed Session"
       - lint
       - test (18)
       - test (20)
