--- a/.readme-partials.yml
+++ b/.readme-partials.yml
@@ -2,3 +2,24 @@ introduction: |-
         [Cloud Spanner](https://cloud.google.com/spanner/docs/) is a fully managed, mission-critical, relational database service that
         offers transactional consistency at global scale, schemas, SQL (ANSI 2011 with extensions),
         and automatic, synchronous replication for high availability.
+
+body: |-
+        ## Multiplexed Sessions
+
+        Spanner's Multiplexed Sessions can now be used as an efficient alternative to the default session pool. This feature helps reduce
+        session management overhead and minimize session-related errors. Multiplexed sessions can be enabled for all transaction types via environment variables.
+
+        ### Configuration
+
+        To enable this feature, set the following environment variables to `true`:
+
+        * **For Read-Only Transactions:**
+        - `GOOGLE_CLOUD_SPANNER_MULTIPLEXED_SESSIONS`
+        * **For Partitioned Operations:**
+        - `GOOGLE_CLOUD_SPANNER_MULTIPLEXED_SESSIONS`
+        - `GOOGLE_CLOUD_SPANNER_MULTIPLEXED_SESSIONS_PARTITIONED_OPS`
+        * **For Read-Write Transactions:**
+        - `GOOGLE_CLOUD_SPANNER_MULTIPLEXED_SESSIONS`
+        - `GOOGLE_CLOUD_SPANNER_MULTIPLEXED_SESSIONS_FOR_RW`
+
+        For a detailed explanation of this feature, please refer to the [official documentation](https://cloud.google.com/spanner/docs/sessions#multiplexed_sessions).
