feat: multiplexed session as default session mode

--- a/.github/sync-repo-settings.yaml
+++ b/.github/sync-repo-settings.yaml
@@ -7,7 +7,7 @@ branchProtectionRules:
     requiredStatusCheckContexts:
       - "ci/kokoro: Samples test"
       - "ci/kokoro: System test"
-      - "ci/kokoro: System test with Multiplexed Session"
+      - "ci/kokoro: System test with Regular Sessions"
       - lint
       - test (18)
       - test (20)
