--- a/.kokoro/presubmit/node18/system-test-regular-session.cfg
+++ b/.kokoro/presubmit/node18/system-test-regular-session.cfg
@@ -13,15 +13,15 @@ env_vars: {
 
 env_vars: {
   key: "GOOGLE_CLOUD_SPANNER_MULTIPLEXED_SESSIONS"
-  value: "true"
+  value: "false"
 }
 
 env_vars: {
   key: "GOOGLE_CLOUD_SPANNER_MULTIPLEXED_SESSIONS_PARTITIONED_OPS"
-  value: "true"
+  value: "false"
 }
 
 env_vars: {
   key: "GOOGLE_CLOUD_SPANNER_MULTIPLEXED_SESSIONS_FOR_RW"
-  value: "true"
+  value: "false"
 }
